# quint-connect

./: Cargo.toml  LICENSE  README.md
connect/: Cargo.toml  README.md
connect-macros/: Cargo.toml  README.md
connect-macros/src/: lib.rs
connect-macros/src/internal/: mod.rs  run.rs  switch.rs  test.rs  utils.rs
connect/examples/tictactoe/: game.rs  main.rs  mbt.rs
connect/examples/two_phase_commit/: main.rs  mbt.rs  system.rs
connect/examples/two_phase_commit/spec/: choreo.qnt  two_phase_commit.qnt
connect/src/: itf.rs  lib.rs  runner.rs
connect/src/driver/: annotations.rs  driver.rs  mod.rs  nondet.rs  state.rs  status.rs  step.rs
connect/src/itf/: display.rs  mod.rs  option.rs  reader.rs
connect/src/logger/: logger.rs  mod.rs  util.rs
connect/src/runner/: mod.rs  seed.rs
connect/src/trace/: iter.rs  mod.rs
connect/src/trace/generator/: mod.rs  run.rs  test.rs
connect/src/value/: display.rs  option.rs
connect/tests/: macros.rs
connect/tests/macros/quint_run/fail/: empty_spec.rs  empty_spec.stderr  invalid_attribute.rs  invalid_attribute.stderr  invalid_num.rs  invalid_num.stderr  invalid_str.rs  invalid_str.stderr  missing_spec.rs  missing_spec.stderr
connect/tests/macros/quint_run/fail/nighly/: invalid_num.stderr
connect/tests/macros/quint_run/fail/stable/: invalid_num.stderr
connect/tests/macros/quint_run/pass/: partial_config.rs  simple.rs  spec_and_init.rs  spec_and_main.rs  spec_and_max_samples.rs  spec_and_max_steps.rs  spec_and_seed.rs  spec_and_step.rs
connect/tests/macros/quint_test/fail/: empty_spec.rs  empty_spec.stderr  empty_test.rs  empty_test.stderr  invalid_attribute.rs  invalid_attribute.stderr  invalid_num.stderr  invalid_str.rs  invalid_str.stderr  missing_spec.rs  missing_spec.stderr  missing_test.rs  missing_test.stderr
connect/tests/macros/quint_test/fail/nightly/: invalid_num.stderr
connect/tests/macros/quint_test/fail/stable/: invalid_num.rs  invalid_num.stderr
connect/tests/macros/quint_test/pass/: partial_config.rs  simple.rs  spec_and_test_and_main.rs  spec_and_test_and_max_samples.rs  spec_and_test_and_seed.rs
connect/tests/macros/switch/fail/: catch_all_requires_handler.rs  catch_all_requires_handler.stderr  multiple_catch_all_cases.rs  multiple_catch_all_cases.stderr
connect/tests/macros/switch/pass/: block_handlers.rs  catch_all_only.rs  implicit_handlers.rs  mixed_patterns.rs  no_catch_all.rs  optional_params.rs  required_params.rs  simple.rs  type_annotations.rs
