[package]
name        = "quint-connect-macros"
readme      = "README.md"
description = "Procedural macros used by the `quint-connect` crate."

version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
categories    = { workspace = true }
keywords      = { workspace = true }
authors       = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote       = "1.0"
syn         = { version = "2.0", features = ["full"] }
