[package]
name = "quint-connect"
version = "0.1.0"
edition = "2024"

[dependencies]
quint-connect-macros = { workspace = true }

anyhow = "1.0"
itf = "0.4"
serde = "1.0"
serde_json = "1.0"
tempdir = "0.3"
colored = "3.0"
rand = "0.9"
similar = "2.7"

[dev-dependencies]
trybuild = { version = "1.0.114", features = ["diff"] }
