[package]
name   = "quint-connect"
readme = "README.md"
description = "A model-based testing framework that connects Quint specifications with Rust applications"

version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
categories    = { workspace = true }
keywords      = { workspace = true }
authors       = { workspace = true }

[dependencies]
quint-connect-macros = { workspace = true }

anyhow     = "1.0"
itf        = "0.4"
serde      = "1.0"
serde_json = "1.0"
tempfile   = "3.0"
colored    = "3.0"
rand       = "0.9"
similar    = "2.7"

[dev-dependencies]
trybuild = { version = "1.0.114", features = ["diff"] }
